// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multi route 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: -1px;
}

.c10 > * {
  margin: 1px !important;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border: unset;
  border-radius: 0.5rem;
  color: #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 6px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: 500;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFF;
  width: 400px;
}

.c3 {
  display: grid;
  grid-gap: 8px;
  grid-template-columns: 24px 1fr 24px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.1rem 0.5rem;
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.25rem 0.5rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  width: calc(100%);
  z-index: 1;
  opacity: 0.5;
}

.c6 path {
  stroke: #ffffff;
}

.c8 {
  background-color: #ffffff;
  z-index: 2;
}

<div
    class="c0 css-vurnku"
  >
    <div
      class="c1 c2 c3"
    >
      CurrencyLogo currency=USDC
      <div
        class="c1 c2 c4"
      >
        <div
          class="c5"
        >
          <svg
            class="c6"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="c7 c8"
        >
          <div
            class="css-15li2d9"
            style="word-break: normal;"
          >
            75%
          </div>
        </div>
        <div
          class="c9 c2 c10"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          <div
            class="c7 c11"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=DAI currency1=USDC
            </div>
            <div
              class="css-15li2d9"
            >
              0.05%
            </div>
          </div>
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
    <div
      class="c1 c2 c3"
    >
      CurrencyLogo currency=USDC
      <div
        class="c1 c2 c4"
      >
        <div
          class="c5"
        >
          <svg
            class="c6"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="c7 c8"
        >
          <div
            class="css-15li2d9"
            style="word-break: normal;"
          >
            25%
          </div>
        </div>
        <div
          class="c9 c2 c10"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          <div
            class="c7 c11"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=WBTC currency1=USDC
            </div>
            <div
              class="css-15li2d9"
            >
              0.3%
            </div>
          </div>
          <div
            class="c7 c11"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=DAI currency1=WBTC
            </div>
            <div
              class="css-15li2d9"
            >
              1%
            </div>
          </div>
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders single route 1`] = `
<DocumentFragment>
  .c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: -1px;
}

.c10 > * {
  margin: 1px !important;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border: unset;
  border-radius: 0.5rem;
  color: #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 6px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: 500;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFF;
  width: 400px;
}

.c3 {
  display: grid;
  grid-gap: 8px;
  grid-template-columns: 24px 1fr 24px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.1rem 0.5rem;
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.25rem 0.5rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  width: calc(100%);
  z-index: 1;
  opacity: 0.5;
}

.c6 path {
  stroke: #ffffff;
}

.c8 {
  background-color: #ffffff;
  z-index: 2;
}

<div
    class="c0 css-vurnku"
  >
    <div
      class="c1 c2 c3"
    >
      CurrencyLogo currency=USDC
      <div
        class="c1 c2 c4"
      >
        <div
          class="c5"
        >
          <svg
            class="c6"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="c7 c8"
        >
          <div
            class="css-15li2d9"
            style="word-break: normal;"
          >
            100%
          </div>
        </div>
        <div
          class="c9 c2 c10"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          <div
            class="c7 c11"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=DAI currency1=USDC
            </div>
            <div
              class="css-15li2d9"
            >
              0.05%
            </div>
          </div>
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders when no routes are provided 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFF;
  width: 400px;
}

<div
    class="c0 css-vurnku"
  />
</DocumentFragment>
`;
